[project]
name = "l0-network-management-system"
version = "0.1.0"
description = ""
authors = [
    {name = "SouzaSantosK",email = "kaua.souza.santosc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
